--- a/unctool/Cargo.toml
+++ b/unctool/Cargo.toml
@@ -2,7 +2,8 @@
 name = "unctool"
 version = "0.1.0"
 edition = "2024"
-license = "apache"
+license = "Apache-2.0"
+descritpion = "A library to convert between Linux and Windows UNC paths. Converts local Linux path to Windows/Linux UNC and vice versa."
 
 [dependencies]
 shellexpand = "3.1.1"
