--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
 [workspace]
 resolver = "3"
-members = ["unctool", "unctool_cli"]
+members = ["unctool", "unctool_cli", "unctool_gui"]
+
+[profile.release]
+opt-level = 's'
+lto = true
+codegen-units = 1
+strip = true
+panic = 'abort'
